# content-autopilot

./: .dockerignore  .env.example  Dockerfile  GUIDE.md  Makefile  README.md  SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.sh
.sisyphus/evidence/: task-10-github-collect.txt  task-11-rss-collect.txt  task-12-youtube-collect.txt  task-13-dedup-accuracy.txt  task-14-scoring.txt  task-15-summarize.txt  task-16-humanize.txt  task-17-ghost-publish.txt  task-18-telegram.txt  task-19-discord.txt  task-2-db-migration.txt  task-20-pipeline-e2e.txt  task-21-api-endpoints.txt  task-22-dashboard-ui.txt  task-26-mastodon.txt  task-27-scheduling.txt  task-28-membership.txt  task-29-monetization.txt  task-3-schema-validation.txt  task-4-ghost-api.txt  task-5-persona-config.txt  task-6-deepseek-api.txt  task-7-utilities.txt  task-8-hn-collect.txt  task-9-reddit-collect.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
config/: monetization.yaml  newsletter.yaml  schedule.yaml  scoring.yaml  social.yaml
config/personas/: default.yaml  research.md
config/sources/: github.yaml  hn.yaml  reddit.yaml  rss.yaml  youtube.yaml
data/: naver_cookies.json
scripts/: mac-setup.sh  sync-env.sh
src/content_autopilot/: __init__.py  app.py  cli.py  config.py  db.py
src/content_autopilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_ai_client.py  test_pipeline.py
tests/collectors/: test_github.py  test_hn.py  test_reddit.py  test_rss.py  test_youtube.py
tests/processing/: test_dedup.py  test_humanizer.py  test_scorer.py  test_summarizer.py
(+70 files in other folders)
